Document Array#flatten{,!} accept explicit nil argument [ci skip]

Fixes [Bug #10475]